--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "theverycynicalbot",
+  "name": "pollbot",
   "version": "0.0.1",
   "description": "multi-function Discord Bot",
   "main": "index.js",
