Updated timings and deletions.

--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,5 @@
 {
-"token": "INSERT TOKEN",
-"prefix": ";;"
+"token": "NDgyMjM2ODM4MDc0MTIyMjQy.DmB__w.4cnJiNPfnIcCMqr4CDc5vw2Rs1M",
+"prefix": ";;",
+"purple": "#d604cf"
 }
