--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-"token": "NDgyMjM2ODM4MDc0MTIyMjQy.DmB__w.4cnJiNPfnIcCMqr4CDc5vw2Rs1M",
+"token": "INSERT TOKEN",
 "prefix": ";;",
 "purple": "#d604cf"
 }
