--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-"token": "INSERT TOKEN",
+"token": "NDgyMjM2ODM4MDc0MTIyMjQy.Dm81Wg.xj1Ggjx42v9WRCfWQVWhVJA0aHU",
 "prefix": ";;",
 "purple": "#d604cf"
 }
